--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "sockjs-client": "^1.1.2",
     "style-loader": "0.13.1",
     "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0"
+    "webpack-dev-server": "^3.5.1"
   },
   "dependencies": {
+    "js-yaml": "^3.13.1",
     "react": "15.4.2",
     "react-dom": "15.4.2"
   }
